2007-01-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields: New code from Tim for MM2 and Ghemical force fields.

	* include/Makefile.*: Updates for Chris's changes earlier today.

	* include/inchi/*.c: Moved actual inchi source files back to src/.

	* configure, */Makefile.in: Updates for inchi move and forcefield directory.

2007-01-03 Chris Morley <ob@gaseq.co.uk>

	* Update Windows project files. But Python SWIG interface isn't
	working on Windows.
	
	* Moved libxml and inchi header files to include.

2006-12-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Doxyfile: Change format slightly for better API documentation.

	* src/*, include/openbabel/*: Many API documentation updates.

	* include/openbabel/base.h, src/base.cpp (OBBase::Clear): New method in base
	class to improve OBConversion::Read() syntax.

2006-12-27 Chris Morley <ob@gaseq.co.uk>

	* src/newlinebuf.cpp: Revert to as in rev 1652.

2006-12-22 Chris Morley <ob@gaseq.co.uk>

	* include/openbabel/pluginiter.h, fingerprint.h: Modify so that most
	of code to implement plugin module behaviour is in pluginiter.h,
	making it easy to give this behaviour in future to other classes.
	Compatibility for OBFingerprint maintained except for iteration
	through fingerprint types which is now in the style of obiter,
	hopefully making it compatible with Python (binding not yet done).
	
	* formats/fastsearchformat.cpp: change implementation of F option
	to new iteration style.
	
	* src/fingerprint.cpp, include/openbabel/fingerprint.h: remove 
	the replaced static variable _pDefault and GetNxtFPrt().
	Add FastSearch::ReadIndexFile() alterantive to avoid 
	std::stream parameter which is no good for scripting.
	Add FastSearch::FindMatch() which is simialr to Find() but requires
	all bits of fingerprint to match.
	
	* src/obconversion.cpp: added NO_NEWLINEBUF to avaoid compiling
	newline buf which is currently incompatible with FastsearchFormat
	and OBConversion::SkipObjects().